# CMake_Build

./: .gitignore
1-build_using_cmake/: CMakeLists.txt
1-build_using_cmake/src/: main.cpp
2-Using_library_in_cmake/: CMakeLists.txt
2-Using_library_in_cmake/CandyMath/: math.cpp  math.hpp
2-Using_library_in_cmake/src/: main.cpp
